--- a/build.gradle
+++ b/build.gradle
@@ -5,6 +5,7 @@ buildscript {
         maven { url 'https://jitpack.io' }
     }
     dependencies {
+        classpath 'com.google.gms:google-services:4.3.14'
         def nav_version = "2.4.2"
         classpath "androidx.navigation:navigation-safe-args-gradle-plugin:$nav_version"
         classpath("com.google.dagger:hilt-android-gradle-plugin:2.42")
@@ -14,7 +15,7 @@ buildscript {
 plugins {
     id 'com.android.application' version '7.2.2' apply false
     id 'com.android.library' version '7.2.2' apply false
-    id 'org.jetbrains.kotlin.android' version '1.7.0' apply false
+    id 'org.jetbrains.kotlin.android' version '1.7.10' apply false
 }
 task clean(type: Delete) {
     delete rootProject.buildDir
