--- a/settings.gradle
+++ b/settings.gradle
@@ -3,9 +3,9 @@ pluginManagement {
         gradlePluginPortal()
         google()
         mavenCentral()
-        maven {
-            url 'https://dl.bintray.com/amulyakhare/maven'
-        }
+//        maven {
+//            url 'https://dl.bintray.com/amulyakhare/maven'
+//        }
     }
 }
 dependencyResolutionManagement {
@@ -13,9 +13,9 @@ dependencyResolutionManagement {
     repositories {
         google()
         mavenCentral()
-        maven {
-            url 'https://jitpack.io'
-        }
+//        maven {
+//            url 'https://jitpack.io'
+//        }
     }
 }
 rootProject.name = "ShoppingListMS"
