--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,6 +5,7 @@ plugins {
     id 'kotlin-kapt'
     id("dagger.hilt.android.plugin")
     id 'com.google.gms.google-services'
+ //   id("org.jetbrains.kotlin.plugin.serialization")
 }
 
 android {
@@ -18,6 +19,12 @@ android {
         versionName "1.0"
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
+        //Getting the git ignored properties
+        Properties properties = new Properties()
+        properties.load(project.rootProject.file("local.properties").newDataInputStream())
+
+        buildConfigField "String", "API_KEY", "\"${properties.getProperty("API_KEY")}\""
+
     }
 
     buildTypes {
@@ -87,5 +94,19 @@ dependencies {
     implementation 'com.google.firebase:firebase-auth-ktx'
     implementation 'com.google.firebase:firebase-firestore-ktx'
     implementation 'com.google.firebase:firebase-messaging-ktx:23.1.0'
+
+    // Retrofit
+    implementation 'com.squareup.retrofit2:retrofit:2.9.0'
+    implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
+
+    //Ktor
+//    implementation 'io.ktor:ktor-client-core:2.1.3'
+//    implementation 'io.ktor:ktor-client-serialization:2.1.3'
+//    implementation 'io.ktor:ktor-client-serialization-jvm:2.1.3'
+//    implementation "io.ktor:ktor-client-okhttp:2.1.3"
+//    implementation("io.ktor:ktor-serialization-kotlinx-json:2.1.3")
+//    implementation("io.ktor:ktor-client-content-negotiation:2.1.3")
+//    implementation 'io.ktor:ktor-client-android:1.5.0'
+//    implementation("io.ktor:ktor-client-auth:2.1.3")
 
 }
