--- a/build.gradle
+++ b/build.gradle
@@ -9,6 +9,7 @@ buildscript {
         def nav_version = "2.4.2"
         classpath "androidx.navigation:navigation-safe-args-gradle-plugin:$nav_version"
         classpath("com.google.dagger:hilt-android-gradle-plugin:2.42")
+       // classpath 'org.jetbrains.kotlin:kotlin-serialization:1.7.10'
     }
 }
 
